--- a/Deep_MINE.ipynb
+++ b/Deep_MINE.ipynb
@@ -2940,6 +2940,14 @@
         "        x_hat = self.conv6(h)\n",
         "        return x_hat\n",
         "\n",
+        "    def encode(self, x):\n",
+        "        # encoder\n",
+        "        h = self.relu(self.conv1(x))\n",
+        "        h = self.relu(self.conv2(h))\n",
+        "        h = self.pool(h)\n",
+        "        h = self.fc3(h.reshape(-1, 25600))\n",
+        "        return h\n",
+        "\n",
         "\n",
         "class TextAutoEncoder(nn.Module):\n",
         "\n",
@@ -2976,6 +2984,13 @@
         "        x_hat = self.fc4(h)\n",
         "        return x_hat\n",
         "\n",
+        "    def encode(self, x):\n",
+        "        # encoder\n",
+        "        h = self.relu(self.fc1(x))\n",
+        "        h = self.fc2(h)\n",
+        "        return h\n",
+        "\n",
+        "\n",
         "model = TextAutoEncoder()\n",
         "print(sum(p.numel() for p in model.parameters()))\n",
         "print(model)\n",
@@ -2989,9 +3004,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c7a59247-3223-46b2-f1d1-ba8a71a5c6dd"
+        "outputId": "176c1703-ea34-413a-e074-ac04a00622ef"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -3017,7 +3032,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 9
         }
       ]
     },
@@ -3368,6 +3383,199 @@
           },
           "metadata": {},
           "execution_count": 184
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "tj5-grcYtV-C"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Deep-MINE"
+      ],
+      "metadata": {
+        "id": "JkCPXKgXvgJK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n_users = 200\n",
+        "n_items = 500\n",
+        "\n",
+        "dim_gamma = 4\n",
+        "dim_theta = 4\n",
+        "\n",
+        "input_features = torch.randn(n_items, 4096)"
+      ],
+      "metadata": {
+        "id": "HHNXdKrOtq8D"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# user perception factors\n",
+        "u_users = nn.Embedding(n_users, 20)\n",
+        "theta_users = nn.Embedding(n_users, 20)\n",
+        "\n",
+        "# hidden information factor\n",
+        "v_items = nn.Embedding(n_items, 20)\n",
+        "\n",
+        "# cognition factors\n",
+        "a_1 = nn.Embedding(n_users, 1)\n",
+        "a_2 = nn.Embedding(n_users, 1)\n",
+        "a_3 = nn.Embedding(n_users, 1)\n",
+        "\n",
+        "# embedding layer of information integration\n",
+        "embeddings = nn.Embedding(300, 20)\n",
+        "\n",
+        "# biases\n",
+        "alpha_users = nn.Embedding(n_users, 1)\n",
+        "beta_items = nn.Embedding(n_items, 1)"
+      ],
+      "metadata": {
+        "id": "yGDR1e9ytWAu"
+      },
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "images_autoencoder = ImageAutoEncoder()\n",
+        "descriptions_autoencoder = TextAutoEncoder()\n",
+        "reviews_autoencoder = TextAutoEncoder()"
+      ],
+      "metadata": {
+        "id": "kPpjLwu8vtIc"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "user = torch.LongTensor([4])\n",
+        "p_item = torch.LongTensor([50])\n",
+        "n_item = torch.LongTensor([98])"
+      ],
+      "metadata": {
+        "id": "cmWggyc8KTGG"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# information representation\n",
+        "m3 = images_autoencoder.encode(torch.randn(1, 3, 40, 40))\n",
+        "d2 = descriptions_autoencoder.encode(torch.randn(1, 32))\n",
+        "r2 = reviews_autoencoder.encode(torch.randn(1, 32))"
+      ],
+      "metadata": {
+        "id": "_qXh_n4RtyR_"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# user's cognitive styles\n",
+        "ai1 = a_1(user)\n",
+        "ai2 = a_2(user)\n",
+        "ai3 = a_3(user)"
+      ],
+      "metadata": {
+        "id": "wktWAxh3KNMt"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# information integration\n",
+        "f_c = torch.cat([ai1.mm(m3), ai2.mm(d2), ai3.mm(r2)], dim=-1)\n",
+        "f_j = f_c.mm(embeddings.weight)\n",
+        "f_j.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SVo6PhoaKntT",
+        "outputId": "c69a41a1-42b1-4e1b-d694-c954a76dd133"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([1, 20])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# user preference\n",
+        "ui_latent_factor = u_users(user)\n",
+        "ui_content_factor = theta_users(user)\n",
+        "\n",
+        "# hidden information\n",
+        "vj_hidden_info = v_items(p_item)\n",
+        "\n",
+        "# biases\n",
+        "ui_bias = alpha_users(user)\n",
+        "ji_bias = beta_items(p_item)"
+      ],
+      "metadata": {
+        "id": "m2UIpuaKLfYn"
+      },
+      "execution_count": 55,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_ij = ui_bias + ji_bias + ui_latent_factor.mm(vj_hidden_info.T) + ui_content_factor.mm(f_j.T)\n",
+        "x_ij"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "T6rZapObLuHm",
+        "outputId": "581a56e1-f6f3-4bc5-9262-73c7aacc6d1f"
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[10.7693]], grad_fn=<AddBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 58
         }
       ]
     }
